# mufettis-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy_aws.ps1  docker-compose.yml  mufettis-yol.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: client.py
backend/app/core/: config.py
backend/app/services/: rag_service.py
data/md-chunks/: 193-Gelir Vergisi Kanunu-chunk.md  2004-İcra ve İflas Kanunu-chunk.md  213-Vergi Usul Kanunu-chunk.md  3065-KDV Kanunu-chunk.md  4721-Türk Medeni Kanunu-chunk.md  4857-İş Kanunu-chunk.md  5237-Türk Ceza Kanunu-chunk.md  5271-CMK-chunk.md  5411-Bankacılık Kanunu-chunk.md  5520-Kurumlar Vergisi Kanunu-chunk.md  5651-İnternet Ortamında Yapılan Yayınların Düzenlenmesi ve Bu Yayınlar Yolyla İşlenen Suçlar Kanunu-chunk.md  5941-Çek Kanunu-chunk.md  6098-Borçlar Kanunu-chunk.md  6102-TTK-chunk.md  6362-SPK-chunk.md  6802-Gider Vergileri Kanunu-chunk.md  BANKALAR VE KONSOLİDE DENETİME TABİ KURULUŞLARCA YAPILABİLECEK BAĞIŞ-chunk.md  BANKALARIN KREDİ İŞLEMLERİNE YÖN.-chunk.md  Banka TDHP-chunk.md  Fin. Kiralama,Faktöring, TFŞ TDHP-chunk.md  Katılım Bankası TDHP-chunk.md  Kredilerin Sınıflandırılması Yönetmeliği-chunk.md  Mevduat ve Katılım Fonunun Kabulüne,Çekilmesine ve Zamanaşımına İlişkin Yön.-chunk.md  Sermaye+Hareketleri+Genelgesi+-chunk.md  TDHP Yönetmelik-chunk.md  yonetmelik-chunk.md
frontend/: Dockerfile  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatMessage.tsx  ResultList.tsx  SearchBox.tsx  ThemeProvider.tsx  ThemeToggle.tsx
scripts/: check_db.py  debug_tck.py  docling_chunker.py  embed_and_index.py  pipeline.bat  test_agent.py
scripts/_archive/: chunker.py  extractor.py  inspect_bk.py  test_key.py
(+3 files in other folders)
