[project]
name = "mufettis-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Habip ",email = "habipokcu9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber (>=0.11.8,<0.12.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "google-genai (>=1.54.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
